# pharmaquiz

./: README.md  manage.py  pyproject.toml
pharmaquiz/: asgi.py  settings.py  urls.py  wsgi.py
quiz/: admin.py  models.py  urls.py  views.py
quiz/migrations/: 0001_initial.py
quiz/static/css/: style.css
quiz/static/js/: main.js
templates/: base.html
templates/quiz/: index.html
