[tool.poetry]
name = "pharmaquiz"
version = "0.1.0"
description = ""
authors = ["ThiagoDiasV <thiago76ers@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.3"
django-nested-admin = "^3.2.4"
psycopg2 = "^2.8.4"
psycopg2-binary = "^2.8.4"

[tool.poetry.dev-dependencies]
pylama = "^7.7.1"
black = "^19.10b0"
ipython = "^7.12.0"
ipdb = "^0.12.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
